# THERMAL

./: CMakeLists.txt  README.md  make_dummy.py
src/: agent.cpp  agent.h  main.cpp  telemetry.cpp  train.py  train_env.py  training_log.csv  visualize.py
